# dvg_app

./: .gitignore  README.md
backend/: pyproject.toml
backend/backend/: settings.py
backend/blog/: models.py  schema.py
backend/blog/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: main.js  router.js
frontend/src/components/: AllPosts.vue  AuthorLink.vue  BlogPost.vue  PostAuthor.vue  PostList.vue  PostsByTag.vue
