[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Matias Cardenas <cardenasmatias.1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.1.7"
black = "^22.6.0"
isort = "^5.10.1"
graphene-django = "2.14.0"
django-cors-headers = "3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
